syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTStoreSecret";
option optimize_for = LITE_RUNTIME;

import public "PeerEnums.proto";

message StoreSecret {
    optional uint32 version = 1;
    optional SecretType type = 2;
    optional string primary = 3;
    optional string secondary = 4;
}
